apps/atuin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: atuin
  namespace: atuin
spec:
  selector:
    app.kubernetes.io/name: atuin
  ports:
    - name: http
      port: 8888
      targetPort: http
