apps/atuin/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atuin
  namespace: atuin
spec:
  parentRefs:
    - name: default
      namespace: gateway
      sectionName: atuin
  hostnames:
    - atuin.tomerhanochi.com
  rules:
    - backendRefs:
        - name: atuin
          port: 8888
